--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
-logging.level.=DEBUG
-spring.jpa.database-platform=com.example.Catalog_Server.Book.SQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=com.example.Catalog_Server.Book.SQLDialect
+#logging.level.root=debug
+#logging.level.com.baeldung=debug
+
 
